# demo

./: .env.example  .gitignore  App.tsx  DEPLOY.md  Dockerfile  README.md  build.sh  docker-compose.prod.yml  docker-compose.yml  fixes.md  index.css  mailersend.md  metadata.json  package-lock.json  package.json  promt.md  pyproject.toml  render.yaml  requirements.txt  tailwind.config.js  types.ts
apps/accounts/: urls.py  views.py
apps/cart/: admin.py  apps.py  cart.py  context_processors.py  models.py  urls.py  views.py  wishlist.py
apps/cart/migrations/: 0001_initial.py
apps/catalog/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
apps/catalog/migrations/: 0001_initial.py  0002_product_gender.py  0003_product_unavailable_sizes.py
apps/core/: htmx.py  ratelimit.py
apps/orders/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_order_payment_status.py  (+1 more)
components/: CartSidebar.tsx  Navbar.tsx  ProductCard.tsx
config/: urls.py
config/settings/: base.py  development.py  local.py  production.py  render.py
data/: mock.ts
docker/nginx/: dev.conf  prod.conf
static/css/: tailwind.css
templates/: base.html  robots.txt  splash.html
templates/accounts/: account.html  login.html  register.html
templates/catalog/: catalog.html  product_detail.html
templates/orders/: checkout.html  order_confirmation.html  payment_failed.html  payment_pending.html  payment_success.html
templates/partials/: footer.html  navbar.html
views/: Account.tsx  Catalog.tsx  ProductDetail.tsx
(+22 files in other folders)
